update to 1.19.3 with no compile errors
missing:
- button/screen tooltips must be re-added
- worldgen related registry entries must be checked
- recipe categories must be corrected (all are set to misc)
- guide api must be removed/updated